Fix weird scrollbars in add new goal.

--- a/app/styles/goal.sass
+++ b/app/styles/goal.sass
@@ -98,3 +98,6 @@ li .comma-separated:after
  content: ', '
 li .comma-separated:last-of-type:after
  content: ' '
+
+.fbf-modal
+ overflow: auto
